--- a/eae0310-12-taxacao-poupanca.html
+++ b/eae0310-12-taxacao-poupanca.html
@@ -3,7 +3,8 @@
   <head>
     <title>EAE-0310: ECONOMIA DO SETOR PÚBLICO</title>
     <meta charset="utf-8" />
-    <meta name="author" content="Pedro Forquesato http://www.pedroforquesato.com Sala 19C/FEA2 - pforquesato@usp.br" />
+    <meta name="author" content="Pedro Forquesato http://www.pedroforquesato.com Sala 217/FEA2 - pforquesato@usp.br" />
+    <script src="libs/header-attrs-2.14/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
   </head>
@@ -11,10 +12,18 @@
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
+.title[
 # EAE-0310: ECONOMIA DO SETOR PÚBLICO
-### Pedro Forquesato<br/><a href="http://www.pedroforquesato.com" class="uri">http://www.pedroforquesato.com</a><br/>Sala 19C/FEA2 - <a href="mailto:pforquesato@usp.br" class="email">pforquesato@usp.br</a>
+]
+.author[
+### Pedro Forquesato<br/><a href="http://www.pedroforquesato.com" class="uri">http://www.pedroforquesato.com</a><br/>Sala 217/FEA2 - <a href="mailto:pforquesato@usp.br" class="email">pforquesato@usp.br</a>
+]
+.institute[
 ### Faculdade de Economia, Administração e Contabilidade<br/>Universidade de São Paulo
+]
+.date[
 ### Aula 12: Taxação de poupança<br/>2022/1
+]
 
 ---
 
@@ -81,7 +90,7 @@ class: middle
 
 &lt;img src="figs/eae0310-12-1.jpg" width="70%" /&gt;
 
-O Brasil é um dos 5 países do mundo que os 80% mais pobres têm menos riqueza que o 0,001% mais rico (1/100.000), ou seja, 2.000 pessoas (metade da FEA) têm mais riqueza que 160 milhões de brasileiros juntos
+O Brasil é um dos 5 países do mundo que os 80% mais pobres têm menos riqueza que o 0,001% mais rico (1/100.000), ou seja, 2.000 pessoas (o tamanho da FEA) têm mais riqueza que 160 milhões de brasileiros juntos
 
 ---
 class: middle
@@ -157,7 +166,7 @@ Na *belle époque* a riqueza herdade era a grande maioria (~70%), caiu no pós-g
 ---
 class: middle
 
-&lt;img src="figs/eae0310-12-9.png" width="90%" /&gt;
+&lt;img src="figs/eae0310-12-9.png" width="80%" /&gt;
 
 Ao contrário de uma percepção pública do "self-made man", a maior parte da riqueza mundial é herdada, e essa proporção tem crescido [AGP17]
 
@@ -287,6 +296,13 @@ Taxas de retorno variam bastante entre indivíduos e ao longo do tempo, e são c
 ---
 class: middle
 
+&lt;img src="figs/eae0310-12-15.png" width="70%" /&gt;
+
+Algo não levado em conta nos modelos vistos, mas que é um fato estilizado importante, é que pessoas mais ricas têm não apenas riqueza maior, mas uma taxa de retorno da riqueza também maior, o que tende a aumentar a desigualdade de riqueza ao longo do tempo [Fag+20]
+
+---
+class: middle
+
 &lt;img src="figs/eae0310-12-14.png" width="50%" /&gt;&lt;img src="figs/eae0310-12-14b.png" width="50%" /&gt;
 
 Na Dinamarca, observamos um perfil de riqueza compatível com teorias de ciclo-de-vida na população em geral, mas não entre os mais ricos [Jak+20] 
@@ -346,6 +362,7 @@ class: middle
 &lt;img src="figs/eae0310-12-12.png" width="80%" /&gt;
 
 Em 1999 a Dinamarca cortou subsídios para previdência privada dos ricos (azul), mas não da classe média (vermelho): a contribuição a esse tipo de previdência caiu fortemente nesse grupo (tratamento) comparado ao controle [Gru16] apud [Che+14]
+
 
 ---
 class:middle
@@ -431,6 +448,19 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     deleted = true;
   });
 })();
+// add `data-at-shortcutkeys` attribute to <body> to resolve conflicts with JAWS
+// screen reader (see PR #262)
+(function(d) {
+  let res = {};
+  d.querySelectorAll('.remark-help-content table tr').forEach(tr => {
+    const t = tr.querySelector('td:nth-child(2)').innerText;
+    tr.querySelectorAll('td:first-child .key').forEach(key => {
+      const k = key.innerText;
+      if (/^[a-z]$/.test(k)) res[k] = t;  // must be a single letter (key)
+    });
+  });
+  d.body.setAttribute('data-at-shortcutkeys', JSON.stringify(res));
+})(document);
 (function() {
   "use strict"
   // Replace <script> tags in slides area to make them executable
