--- a/eae0310-9-incidencia.html
+++ b/eae0310-9-incidencia.html
@@ -4,7 +4,6 @@
     <title>EAE-0310: ECONOMIA DO SETOR PÚBLICO</title>
     <meta charset="utf-8" />
     <meta name="author" content="Pedro Forquesato http://www.pedroforquesato.com Sala 217/FEA2 - pforquesato@usp.br" />
-    <script src="libs/header-attrs-2.14/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
   </head>
@@ -12,18 +11,10 @@
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
-.title[
 # EAE-0310: ECONOMIA DO SETOR PÚBLICO
-]
-.author[
 ### Pedro Forquesato<br/><a href="http://www.pedroforquesato.com" class="uri">http://www.pedroforquesato.com</a><br/>Sala 217/FEA2 - <a href="mailto:pforquesato@usp.br" class="email">pforquesato@usp.br</a>
-]
-.institute[
 ### Faculdade de Economia, Administração e Contabilidade<br/>Universidade de São Paulo
-]
-.date[
 ### Aula 9: Incidência de impostos<br/>2022/1
-]
 
 ---
 
@@ -369,7 +360,7 @@ class: middle
 
 Internalidades é mais difícil estimar empiricamente &amp;mdash; [ALT19] comparam com consumo de nutricionistas e estimam que pessoas comprariam 31-37% menos SSBs se tivessem informação boa sobre custos de saúde
 
-Isso corresponde a ¢0,91-2,14/oz de externalidades
+Isso corresponde a ¢0,91-2,14/oz de internalidades
 
 Mas essa internalidade é correlacionada com a renda! Em um survey sobre os danos de SSBs, erros de informação são 30% maiores em famílias com renda de 10.000 dólares/ano do que $100.000/ano 
 
@@ -500,19 +491,6 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     deleted = true;
   });
 })();
-// add `data-at-shortcutkeys` attribute to <body> to resolve conflicts with JAWS
-// screen reader (see PR #262)
-(function(d) {
-  let res = {};
-  d.querySelectorAll('.remark-help-content table tr').forEach(tr => {
-    const t = tr.querySelector('td:nth-child(2)').innerText;
-    tr.querySelectorAll('td:first-child .key').forEach(key => {
-      const k = key.innerText;
-      if (/^[a-z]$/.test(k)) res[k] = t;  // must be a single letter (key)
-    });
-  });
-  d.body.setAttribute('data-at-shortcutkeys', JSON.stringify(res));
-})(document);
 (function() {
   "use strict"
   // Replace <script> tags in slides area to make them executable
